--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
-  "features": {
-
-  }
+  "name": "Technical challenge - React",
+  "image": "mcr.microsoft.com/devcontainers/typescript-node:22-bullseye",
+  "postCreateCommand": "pnpm install",
+  "features": {}
 }
